[gd_scene load_steps=16 format=3 uid="uid://fxa88qdkbgw7"]

[ext_resource type="Texture2D" uid="uid://q1uqchrqxmvv" path="res://Sprites/door/doorfront.png" id="1_fhvrj"]
[ext_resource type="Script" path="res://Scripts/moonDoor.gd" id="1_jk6u3"]
[ext_resource type="Texture2D" uid="uid://p0ax7c5uckuo" path="res://Sprites/door/frame.png" id="2_p6ot1"]
[ext_resource type="Texture2D" uid="uid://cogrp5ksl14s7" path="res://Sprites/door/doorback.png" id="3_vnwej"]
[ext_resource type="Texture2D" uid="uid://b5vy3be3nul2x" path="res://Sprites/door/frameFront.png" id="4_at10u"]
[ext_resource type="Texture2D" uid="uid://b8qu16q0dlmwd" path="res://Sprites/lights/light-sheet0.png" id="5_kcott"]
[ext_resource type="PackedScene" uid="uid://c7oa4p0xn7ya" path="res://Instances/interactIcon.tscn" id="5_t1r0f"]
[ext_resource type="AudioStream" uid="uid://c32yfv6tpqqvn" path="res://Audio/sfx/doorBeepClose.ogg" id="8_8ij88"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_yc7sa"]
polygon = PackedVector2Array(-5.99988, -32, -5.99988, 32, -16, 32, -16, -32)

[sub_resource type="Animation" id="Animation_4cd0o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("maindoor/frame/doorFont:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(33, -3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("maindoor/frame/doorBack:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(33, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("maindoor/frame:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qoxef"]
resource_name = "doorClose"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("maindoor/frame/doorBack:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0593129),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33, 5), Vector2(33, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("maindoor/frame/doorFont:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0593129),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33, -6), Vector2(33, -3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("maindoor/frame:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0416558, 0.0622192, 0.159313),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.03, 1.01), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_sqc68"]
resource_name = "doorOpen"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("maindoor/frame/doorFont:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.459183),
"transitions": PackedFloat32Array(1, 1, 1, 1.8025),
"update": 0,
"values": [Vector2(33, -3), Vector2(33, -7), Vector2(33, -6), Vector2(33, -6.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("maindoor/frame/doorBack:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.459183),
"transitions": PackedFloat32Array(1, 1, 1, 1.8),
"update": 0,
"values": [Vector2(33, 3), Vector2(33, 6), Vector2(33, 5), Vector2(33, 5.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7gea6"]
_data = {
"RESET": SubResource("Animation_4cd0o"),
"doorClose": SubResource("Animation_qoxef"),
"doorOpen": SubResource("Animation_sqc68")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6pptc"]
size = Vector2(5, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nxatu"]
size = Vector2(38, 52)

[node name="MoonDoor" type="Node2D"]
script = ExtResource("1_jk6u3")

[node name="maindoor" type="Skeleton2D" parent="."]
z_index = -1

[node name="frame" type="Bone2D" parent="maindoor"]
position = Vector2(-6, 32)
rotation = -1.5708
rest = Transform2D(-4.37114e-08, -1, 1, -4.37114e-08, -6, 32)
editor_settings/show_bone_gizmo = false

[node name="doorFont" type="Bone2D" parent="maindoor/frame"]
z_index = 2
position = Vector2(33, -3)
rotation = 1.5708
rest = Transform2D(-4.37114e-08, 1, -1, -4.37114e-08, 33, -3)
editor_settings/show_bone_gizmo = false

[node name="doorFront" type="Sprite2D" parent="maindoor/frame/doorFont"]
z_index = 2
z_as_relative = false
position = Vector2(9.2, 1)
texture = ExtResource("1_fhvrj")

[node name="doorBack" type="Bone2D" parent="maindoor/frame"]
z_index = -1
position = Vector2(33, 3)
rotation = 1.5708
scale = Vector2(1.325, 1)
rest = Transform2D(-4.37114e-08, 1, -1, -4.37114e-08, 33, 4)
editor_settings/show_bone_gizmo = false

[node name="Doorback" type="Sprite2D" parent="maindoor/frame/doorBack"]
position = Vector2(3, 1)
texture = ExtResource("3_vnwej")

[node name="FrameFront" type="Sprite2D" parent="maindoor/frame"]
z_index = 2
position = Vector2(32, 6)
rotation = 1.5708
texture = ExtResource("4_at10u")

[node name="PointLight2D" type="PointLight2D" parent="maindoor/frame/FrameFront"]
position = Vector2(-13.46, 0.49)
color = Color(0.4, 1, 0.890196, 1)
energy = 1.2
texture = ExtResource("5_kcott")
texture_scale = 0.01

[node name="frame" type="Sprite2D" parent="maindoor/frame"]
z_index = -2
position = Vector2(32, 6)
rotation = 1.5708
texture = ExtResource("2_p6ot1")

[node name="LightOccluder2D" type="LightOccluder2D" parent="maindoor/frame/frame"]
z_index = -1
occluder = SubResource("OccluderPolygon2D_yc7sa")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7gea6")
}

[node name="interactIcon" parent="." instance=ExtResource("5_t1r0f")]
visible = false
light_mask = 0
z_index = 2
position = Vector2(-6, -2)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-8.5, 0)
shape = SubResource("RectangleShape2D_6pptc")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-6, -2)
shape = SubResource("RectangleShape2D_nxatu")

[node name="delayTimer" type="Timer" parent="."]
one_shot = true

[node name="doorSFX" type="AudioStreamPlayer2D" parent="."]

[node name="beepTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="beep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_8ij88")
volume_db = -6.241
